--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,16 @@
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
               }
             ],
+            "tsConfig": "tsconfig.app.json",
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -95,11 +98,10 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
-                
+               
               }
             ],
             "styles": [
